# tridentu-essays

./: CMakeLists.txt  essays.kcfg  essays.rc  essaysconfig.kcfgc  io.github.tridentu.essays.desktop
src/: essayeditor.cpp  essayeditor.h  essayeditor.ui  essaysgeneralpage.cpp  essaysgeneralpage.h  essaysgeneralpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
